# w-m-calculator

./: AI-TRAINING.md  Cargo.toml  Dioxus.toml  TODO.md  index.html
assets/: main-01e8707e2a81bbd4.css  main-01e8707e2a81bbd4.css.br  main-5a5f158c9fca6e19.css  main-5a5f158c9fca6e19.css.br  main-80c3abd46109cb33.css  main-80c3abd46109cb33.css.br  main-bb4e7050b6c47037.css  main-bb4e7050b6c47037.css.br  main-e6a933533b3ae25a.css  main-e6a933533b3ae25a.css.br  main.css  w-m-calculator-18ddc8e9418cdfa3.js  w-m-calculator-18ddc8e9418cdfa3.js.br  w-m-calculator-3ad52e2d393b2d97.js  w-m-calculator-3ad52e2d393b2d97.js.br  w-m-calculator-41f665f7bb25d98a.js  w-m-calculator-41f665f7bb25d98a.js.br  w-m-calculator-58ba60bb06c18d1b.js  w-m-calculator-58ba60bb06c18d1b.js.br  w-m-calculator-77eb0f9cd3e709b4.js  w-m-calculator-77eb0f9cd3e709b4.js.br  w-m-calculator-9078d953c1e2db7f.js  w-m-calculator-9078d953c1e2db7f.js.br  w-m-calculator-a0d75831d4d68cfc.js  w-m-calculator-a0d75831d4d68cfc.js.br  w-m-calculator-adc51e22cd3ba324.js  w-m-calculator-adc51e22cd3ba324.js.br  w-m-calculator-be50fab01240a7d1.js  w-m-calculator-be50fab01240a7d1.js.br  w-m-calculator-d6108be0ac1b465c.js  w-m-calculator-d6108be0ac1b465c.js.br  w-m-calculator-d9e6f82038b3ff82.js  w-m-calculator-d9e6f82038b3ff82.js.br  w-m-calculator-e7d1e4937a73af02.js  w-m-calculator-e7d1e4937a73af02.js.br  w-m-calculator_bg-2c70cd914d900dee.wasm  w-m-calculator_bg-2c70cd914d900dee.wasm.br  w-m-calculator_bg-4867dbbc21498c1a.wasm  w-m-calculator_bg-4867dbbc21498c1a.wasm.br  w-m-calculator_bg-6e0ed526308f0c44.wasm  (+19 more)
src/: main.rs  (+1 more)
(+1 files in other folders)
